Add JPMS module descriptors